--- a/404.html
+++ b/404.html
@@ -8,14 +8,14 @@
   
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>404 Page not found &middot; My New Hugo Site</title>
+  <title>404 Page not found &middot; Zerlinda‘s blog</title>
   <meta name="description" content="" />
 
   
-  <link type="text/css" rel="stylesheet" href="http://earchou123.github.io/css/print.css" media="print">
-  <link type="text/css" rel="stylesheet" href="http://earchou123.github.io/css/poole.css">
-  <link type="text/css" rel="stylesheet" href="http://earchou123.github.io/css/syntax.css">
-  <link type="text/css" rel="stylesheet" href="http://earchou123.github.io/css/hyde.css">
+  <link type="text/css" rel="stylesheet" href="https://earchou123.github.iocss/print.css" media="print">
+  <link type="text/css" rel="stylesheet" href="https://earchou123.github.iocss/poole.css">
+  <link type="text/css" rel="stylesheet" href="https://earchou123.github.iocss/syntax.css">
+  <link type="text/css" rel="stylesheet" href="https://earchou123.github.iocss/hyde.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Abril+Fatface|PT+Sans:400,400i,700">
 
 
@@ -27,20 +27,20 @@
   
 </head>
 
-  <body class=" ">
+  <body class="theme-base-0e ">
   <aside class="sidebar">
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
-      <a href="http://earchou123.github.io/"><h1>My New Hugo Site</h1></a>
+      <a href="https://earchou123.github.io"><h1>Zerlinda‘s blog</h1></a>
       <p class="lead">
-      An elegant open source and mobile first theme for <a href="http://hugo.spf13.com">hugo</a> made by <a href="http://twitter.com/mdo">@mdo</a>. Originally made for Jekyll.
+       This is Zerlinda’s blog 
       </p>
     </div>
 
     <nav>
       <ul class="sidebar-nav">
-        <li><a href="http://earchou123.github.io/">Home</a> </li>
-        
+        <li><a href="https://earchou123.github.io">Home</a> </li>
+        <li><a href="/post/"> Post </a></li><li><a href="/welcome/"> welcome! </a></li>
       </ul>
     </nav>
 
@@ -50,7 +50,7 @@
 
     <main class="content container">
     <h1>404: Page not found</h1>
-<p class="lead">Sorry, we've misplaced that URL or it's pointing to something that doesn't exist. <a href="http://earchou123.github.io/">Head back home</a> to try finding it again.</p>
+<p class="lead">Sorry, we've misplaced that URL or it's pointing to something that doesn't exist. <a href="https://earchou123.github.io">Head back home</a> to try finding it again.</p>
     </main>
 
     
