--- a/about/index.html
+++ b/about/index.html
@@ -40,7 +40,7 @@
     <nav>
       <ul class="sidebar-nav">
         <li><a href="https://earchou123.github.io/">Home</a> </li>
-        <li><a href="/post/"> Posts </a></li><li><a href="/about/"> About </a></li><li><a href="/welcome/"> welcome </a></li>
+        <li><a href="/post/"> Posts </a></li><li><a href="/tags/"> Tags </a></li><li><a href="/categories/"> Categories </a></li><li><a href="/about/"> About </a></li><li><a href="/welcome/"> welcome </a></li>
       </ul>
     </nav>
 
@@ -56,6 +56,8 @@
 <p>说啥好呢&hellip;</p>
 <h2 id="个人主页">个人主页</h2>
 <p><a href="https://earchou123.github.io/">https://earchou123.github.io/</a></p>
+<h2 id="github">Github</h2>
+<p><a href="https://github.com/earchou123">https://github.com/earchou123</a></p>
 <h2 id="联系我">联系我</h2>
 <h3 id="email">Email</h3>
 <p><a href="mailto:earchou123@gmail.com">earchou123@gmail.com</a></p>
