updata g13;add统计文件字符个数

--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
 </ul>
 </li>
 <li><a href="#%E6%96%87%E4%BB%B6copy">文件copy</a></li>
+<li><a href="#%E7%BB%9F%E8%AE%A1%E5%AD%97%E6%95%B0">统计字数</a></li>
 </ul>
 <!-- raw HTML omitted -->
 <h2 id="文件操作">文件操作</h2>
