--- a/series/index.html
+++ b/series/index.html
@@ -12,10 +12,10 @@
   <meta name="description" content="" />
 
   
-  <link type="text/css" rel="stylesheet" href="https://earchou123.github.io/css/print.css" media="print">
-  <link type="text/css" rel="stylesheet" href="https://earchou123.github.io/css/poole.css">
-  <link type="text/css" rel="stylesheet" href="https://earchou123.github.io/css/syntax.css">
-  <link type="text/css" rel="stylesheet" href="https://earchou123.github.io/css/hyde.css">
+  <link type="text/css" rel="stylesheet" href="https://zerlinda123.github.io/css/print.css" media="print">
+  <link type="text/css" rel="stylesheet" href="https://zerlinda123.github.io/css/poole.css">
+  <link type="text/css" rel="stylesheet" href="https://zerlinda123.github.io/css/syntax.css">
+  <link type="text/css" rel="stylesheet" href="https://zerlinda123.github.io/css/hyde.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Abril+Fatface|PT+Sans:400,400i,700">
 
 
@@ -24,7 +24,7 @@
   <link rel="shortcut icon" href="/favicon.png">
 
   
-  <link href="https://earchou123.github.io/series/index.xml" rel="alternate" type="application/rss+xml" title="Zerlinda‘s blog" />
+  <link href="https://zerlinda123.github.io/series/index.xml" rel="alternate" type="application/rss+xml" title="Zerlinda‘s blog" />
   
 </head>
 
@@ -32,7 +32,7 @@
   <aside class="sidebar">
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
-      <a href="https://earchou123.github.io/"><h1>Zerlinda‘s blog</h1></a>
+      <a href="https://zerlinda123.github.io/"><h1>Zerlinda‘s blog</h1></a>
       <p class="lead">
        This is Zerlinda’s blog 
       </p>
@@ -40,7 +40,7 @@
 
     <nav>
       <ul class="sidebar-nav">
-        <li><a href="https://earchou123.github.io/">Home</a> </li>
+        <li><a href="https://zerlinda123.github.io/">Home</a> </li>
         <li><a href="/post/"> Posts </a></li><li><a href="/tags/"> Tags </a></li><li><a href="/categories/"> Categories </a></li><li><a href="/about/"> About </a></li><li><a href="/welcome/"> Welcome </a></li>
       </ul>
     </nav>
