--- a/404.html
+++ b/404.html
@@ -12,10 +12,10 @@
   <meta name="description" content="" />
 
   
-  <link type="text/css" rel="stylesheet" href="https://zerlinda123.github.io/css/print.css" media="print">
-  <link type="text/css" rel="stylesheet" href="https://zerlinda123.github.io/css/poole.css">
-  <link type="text/css" rel="stylesheet" href="https://zerlinda123.github.io/css/syntax.css">
-  <link type="text/css" rel="stylesheet" href="https://zerlinda123.github.io/css/hyde.css">
+  <link type="text/css" rel="stylesheet" href="https://earchou123.github.io/css/print.css" media="print">
+  <link type="text/css" rel="stylesheet" href="https://earchou123.github.io/css/poole.css">
+  <link type="text/css" rel="stylesheet" href="https://earchou123.github.io/css/syntax.css">
+  <link type="text/css" rel="stylesheet" href="https://earchou123.github.io/css/hyde.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Abril+Fatface|PT+Sans:400,400i,700">
 
 
@@ -31,7 +31,7 @@
   <aside class="sidebar">
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
-      <a href="https://zerlinda123.github.io/"><h1>Zerlinda‘s blog</h1></a>
+      <a href="https://earchou123.github.io/"><h1>Zerlinda‘s blog</h1></a>
       <p class="lead">
        This is Zerlinda’s blog 
       </p>
@@ -39,7 +39,7 @@
 
     <nav>
       <ul class="sidebar-nav">
-        <li><a href="https://zerlinda123.github.io/">Home</a> </li>
+        <li><a href="https://earchou123.github.io/">Home</a> </li>
         <li><a href="/post/"> Posts </a></li><li><a href="/tags/"> Tags </a></li><li><a href="/categories/"> Categories </a></li><li><a href="/about/"> About </a></li><li><a href="/welcome/"> Welcome </a></li>
       </ul>
     </nav>
@@ -50,7 +50,7 @@
 
     <main class="content container">
     <h1>404: Page not found</h1>
-<p class="lead">Sorry, we've misplaced that URL or it's pointing to something that doesn't exist. <a href="https://zerlinda123.github.io/">Head back home</a> to try finding it again.</p>
+<p class="lead">Sorry, we've misplaced that URL or it's pointing to something that doesn't exist. <a href="https://earchou123.github.io/">Head back home</a> to try finding it again.</p>
     </main>
 
     
