--- a/about/index.html
+++ b/about/index.html
@@ -12,10 +12,10 @@
   <meta name="description" content="" />
 
   
-  <link type="text/css" rel="stylesheet" href="https://zerlinda123.github.io/css/print.css" media="print">
-  <link type="text/css" rel="stylesheet" href="https://zerlinda123.github.io/css/poole.css">
-  <link type="text/css" rel="stylesheet" href="https://zerlinda123.github.io/css/syntax.css">
-  <link type="text/css" rel="stylesheet" href="https://zerlinda123.github.io/css/hyde.css">
+  <link type="text/css" rel="stylesheet" href="https://earchou123.github.io/css/print.css" media="print">
+  <link type="text/css" rel="stylesheet" href="https://earchou123.github.io/css/poole.css">
+  <link type="text/css" rel="stylesheet" href="https://earchou123.github.io/css/syntax.css">
+  <link type="text/css" rel="stylesheet" href="https://earchou123.github.io/css/hyde.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Abril+Fatface|PT+Sans:400,400i,700">
 
 
@@ -31,7 +31,7 @@
   <aside class="sidebar">
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
-      <a href="https://zerlinda123.github.io/"><h1>Zerlinda‘s blog</h1></a>
+      <a href="https://earchou123.github.io/"><h1>Zerlinda‘s blog</h1></a>
       <p class="lead">
        This is Zerlinda’s blog 
       </p>
@@ -39,7 +39,7 @@
 
     <nav>
       <ul class="sidebar-nav">
-        <li><a href="https://zerlinda123.github.io/">Home</a> </li>
+        <li><a href="https://earchou123.github.io/">Home</a> </li>
         <li><a href="/post/"> Posts </a></li><li><a href="/tags/"> Tags </a></li><li><a href="/categories/"> Categories </a></li><li><a href="/about/"> About </a></li><li><a href="/welcome/"> Welcome </a></li>
       </ul>
     </nav>
@@ -55,9 +55,9 @@
   <h2 id="自我介绍">自我介绍</h2>
 <p>说啥好呢&hellip;</p>
 <h2 id="个人主页">个人主页</h2>
-<p><a href="https://earchou123.github.io/">https://earchou123.github.io/</a></p>
+<p><a href="https://zerlinda123.github.io/">https://zerlinda123.github.io/</a></p>
 <h2 id="github">Github</h2>
-<p><a href="https://github.com/earchou123">https://github.com/earchou123</a></p>
+<p><a href="https://github.com/zerlinda123">https://github.com/zerlinda123</a></p>
 <h2 id="联系我">联系我</h2>
 <h3 id="email">Email</h3>
 <p><a href="mailto:earchou123@gmail.com">earchou123@gmail.com</a></p>
